# qa-assist-agent-framework-personalwork

./: .gitignore  AGENTS_STRUCTURE.md  API_KEY_PERSISTENCE.md  ARCHITECTURE_PRESENTATION.md  CHROMADB_SETUP.md  INTERVIEW_QUESTIONS.md  LOCAL_NETWORK_ACCESS.md  PRESENTATION.md  README.md  Untitled  WINDOWS_FIREWALL_GUIDE.md  app.py  auth_store.py  chromadb_utils.py  env.example  fix-ngrok-auth.sh  generated_code.json  get-ngrok-url.sh  kill_ghost_processes.sh  main.py  network-diagnostic.sh  ngrok-setup.sh  presentation.html  pyproject.toml  setup-ngrok-auth.sh  start-network.sh  test_cases.json  update-ngrok-token.sh  utils.py  validation_result.json
codeGenerated/: PAN-12776_REC-1766502304_recording.json  PAN-12776_TC-01_code.json
features/: __init__.py
features/codeGenerator/: __init__.py  agent.py  agent.yaml  generator.py  task.py  task.yaml
features/jiraValidation/: __init__.py  agent.py  agent.yaml  task.py  task.yaml
features/llmKeyValidation/: __init__.py  agent.py  agent.yaml  task.py  task.yaml
features/recording/: __init__.py  playwright_codegen.py  recorder.py
features/testCaseGeneration/: __init__.py  agent.py  agent.yaml  generator.py  task.py  task.yaml
recordings/: REC-1766426296_recording.json  REC-1766476427_recording.json  REC-1766476472_recording.json  REC-1766477477_recording.json  REC-1766502304_recording.json
